# thesis

./: .gitignore  .gitmodules  .projections.json  Makefile  README.md  TODO.md  graphFunctions.py  graphs.py  hoshenKopelman.py  indexClusters.py  isingWorm.py  plotGraph.py  recGraph.py  removeends.py  testGraph.py  utils.py  zeroOneRoute.py
cpp/: .gitignore  CMakeLists.txt  Doxyfile  Graph.cpp  Makefile  Pipfile  a.out  dim.py  doxygen.conf  energy_sizeXY  gccout  main.cpp  myMacro.cxx  run.sh  run_many.sh  separate_data.py  tempMakefile  twoscales.cxx  winding
cpp/application/: closetotcxy.cpp  convert_warmups.cpp  energy_scaling_xy.cpp  gen_frames.cpp  gen_frames_ising.cpp  gen_large_cluster_ising.cpp  gen_large_cluster_xy.cpp  main.cpp  measure_graphdiv.cpp  warmup.cpp  xymain.cpp
cpp/cmake/: SetupBench.cmake  SetupLibraries.cmake  SetupTests.cmake
cpp/prototypes/: Makefile  destructor_constructor.cpp  forlength.cpp  general_file_opener.cpp  get_current_box.py  inheritance.cpp  regex_energy_winding.cpp  regex_find.cpp
cpp/pyplot/: 2dising_animation.py  3dxy_animation.py  EnergyDifference3DXY  Ising2d_dimcomparison.py  XY3d_dimcomparison.py  box.py  box_size_occupied.txt  clean_boxdim.py  clean_mats_winding_data.py  correct_winding.py  dim_loglog.py  flux_illu.py  get_dim.py  graph_dividing_illu.py  grid_of_boxes.py  h_dims  hdim_xy.py  hk_grid.py  ising_loop_illu.py  koch_curve_mockup.py  large_cluster_illu.py  large_cluster_xy_illu.py  plot_acceptance_ratio.py  plot_box_hdim.py  plot_final_sizes.py  plot_graphdiv.py  plot_hausdorff.py  plot_latticeimpl.py  plot_length_distribution.py  plot_max_lengths.py  plot_susceptibility.py  plot_test_data.py  plot_total_lengths.py  plot_winding.py  plot_xyenergy.py  plot_xyhaus.py  plot_xyhausdorff.py  plottest.py  sierpinski.py  spin_illu.py  (+27 more)
cpp/pyplot/data/: animation  h_dimensionXY  windingnum_tempXY
cpp/pyplot/datafrommats/: clean.sh  w10  w12  w4  w40  w6
cpp/pyplot/datafrommats/backup/: w16.backup  w20.backup  w30.backup  w4.backup  w8.backup
cpp/pyplot/helpers/: animate.py  arrow3d.py  calc.py  constants.py  gauss_newton.py  illustrations.py  site.py
cpp/pyplot/helpers/test/: inset.py  test_calc.py
cpp/source/: ClusterDimension.cpp  Graph.cpp  Graph.h  HKIndex.cpp  IndexCluster.cpp  IndexCluster.h  IsingWorm.cpp  IsingWorm.h  Percolation.cpp  Site.cpp  Site.h  main.cpp  main.h  utils.cpp  utils.h
cpp/source/Ising/: IsingGraphUtils.cpp  IsingWorm.cpp  Site.cpp
cpp/source/benchmark/: bench_divgraph.cpp  bench_vecofvecs.cpp
cpp/source/test/: graphTest.cpp  isingTest.cpp  test1.cpp  xyTest.cpp
cpp/source/xy/: IsingGraphUtils.cpp  IsingWorm.cpp  Site.cpp  XYGraphUtils.cpp  xyHelper.h  xyHelpers.cpp  xyHelpers.h  xyWorm.cpp  xyWorm.h
cpp/test/: Graph.cpp  Graph.h  IndexCluster.cpp  IsingWorm.cpp  Site.h  my_test.cpp
latex/thesis/: gpikcrop.pro  kthbk11.clo  kthbk12.clo  ktheorem.sty  sizes.cfg  thesis.cls  thesis.tex  thesis.toc  thesis_bib_style.bst
latex/thesis/.texpadtmp/: thesis.aux  thesis.blg  thesis.toc
presentation/: presentation.tex
presentation/.texpadtmp/: presentation.aux  presentation.nav  presentation.toc  presentation.vrb
python/: config.ini  graphs.py  hoshenKopelman.py  indexClusters.py  isingWorm.py  requirements.txt  testCase.txt  testGraph.py  utils.py
python/dataToMats/: index_cluster_data_0_size_4x4.txt  index_cluster_data_1_size_4x4.txt  index_cluster_data_2_size_4x4.txt
python/test/: test_graphs.py  test_recursiveGraph.py
test/: Makefile  test_graphFunctions.py  test_graphs.py  test_isingWorm.py  test_plotGraph.py
thesis/: Appendix.tex  Makefile  chapter1.tex  chapter2.tex  chapter3.tex  chapter3~.tex  chapter4.tex  chapter6.tex  chapter6~.tex  chapter7.tex  figures  g5crop.pro  kth_pms_enginee_sciences.eps  kthbk9.clo  kthcover.cls  preface.tex  references.bib  s5crop.pro  spikcrop.pro  thesis.aux  thesis.blg  thesis.cls  thesis.dvi  thesis.fdb_latexmk  thesis.fls  thesis.tex  thesis.toc
thesis/.texpadtmp/: thesis.aux  thesis.blg  thesis.toc
